--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
+{% extends 'djangoapp/index.html'%}
+{% load static %}
+{% block content %}
+<html>
+<body>
+    <h1 class="px-3">Add a review about {{dealership.full_name}}</h1>
+    <div class="bg-white">
+        <div class="container py-2"> 
+            <form action="{% url 'djangoapp:add_review' dealer_id%}"  method="post">
+                {% csrf_token %}
+                <div class="container">
+                    <div class="form-group">
+                        <label for="content"><b>Enter the review content</b></label>
+                        <textarea class="form-control" placeholder="Enter review content: " name="content" rows="2" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                        <label class="form-check-label" for="purchasecheck">Has purchased the car from {{dealership.full_name}} ? (select purchased car information below if checked) </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="car"><b>Select your car model (model-make-year)</b></label>
+                        <select name="car" id="car" class="form-select" required>
+                            {% for car in cars %}
+                            <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="purchasedate"><b>Select Your Purchase Date:</b></label>
+                        <input class="form-control" type="date" name="purchasedate" id="purchasedate" placeholder="Enter purchase date">
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+                <script type="text/javascript">
+                    $('.date-own').datepicker({
+                        format: 'mm/dd/yyyy'
+                        });
+                </script>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
