--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-
-    <body>
-
-    <!--Add a nav bar here -->
-
+{% extends 'djangoapp/index.html'%}
+{% load static %}
+{% block content %}
+<html>
+<body>
     <!-- Add reviews as cards -->
-
-    </body>
-
+    <div class="bg-white">
+        <div class="container py-2">
+            <div class="row h-25 align-items-center py-2">
+                <div class="col-lg-10">
+                    <div class="card-columns">
+                        {% for review in review_list %}
+                        <div class="card">
+                            {% if review.sentiment < 0 %}
+                            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width=50>
+                            {% elif review.sentiment > 0 %}
+                            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width=50>
+                            {% else %}
+                            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width=50>
+                            {% endif %}
+                            <div class="card-body">
+                                <h5 class="card-title">{{review.car_make}}, {{review.car_model}}</h5>
+                                <h5 class="card-title">{{review.car_year}}</h5>
+                                <p class="card-text">{{review.review}}</p>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
+{% endblock %}
