--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -76,6 +76,10 @@
             {% endfor %}
         </tbody>
     </table>
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+      </script>
     </body>
-
 </html>
